--- a/details.html
+++ b/details.html
@@ -37,7 +37,7 @@
                 	<hgroup>
                     	<!-- logo -->
                         	<h1>
-                            	<a href="index1.html" title="Picxa"><img src="images/logo.png" alt="Picxa" title="Picxa"/></a>
+                            	<a href="index.html" title="Picxa"><img src="images/logo.png" alt="Picxa" title="Picxa"/></a>
                             </h1>
                         <!-- logo -->
                         <!-- nav -->
@@ -54,10 +54,10 @@
                                 </div>
                                 <div class="main-menu">
                                     <ul>
-                                        <li><a href="index1.html">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="#">About</a></li>
                                         <li><a href="#">blog</a></li>
-                                        <li><a href="contact.html">contact</a></li>
+                                        <li><a href="#">contact</a></li>
                                     </ul>
                                 </div>
                             </div>
